test/syc/good/lvarspar.c
/*
 * Parallel local variables of the same name
 */

int lvarpar(void)
{
	if (1) {
		int i;
	}

	if (1) {
		int i;
	}
}
