test/syc/bad/redeffun.c
/*
 * Redefinition of 'foo'.
 */

void foo(void)
{
}

void foo(void)
{
}
